<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AfvalRoosterActivity!</string>
    <string name="app_name">Afvalrooster Gouda</string>
    
    <string name="vandaag">Vandaag is het </string>
    <string name="komendeweek">Toekomstige week:</string>    
    <string name="dezeweek">Deze week:</string>
    <string name="vorigeweek">Week uit verleden:</string>
    <string name="no_data">Nog geen data te tonen</string>
    <string name="afvaltypefoto">Afvaltypefoto</string>
    <string name="vorige">Vorige</string>
     <string name="wijk">Wijk:</string>
    <string name="huidig">Huidige week</string>
    <string name="volgende">Volgende</string>
    <string name="startnotificatie">Notif Aan</string>
    <string name="stopnotificatie">Notif Uit</string>
    <string name="notificatie">Notificatie</string>
    <string name="afvalnotificatie">De volgende bakken:</string>
    <string name="pref_morgen">Ochtendnotificatie</string>
    <string name="pref_avond">Avondnotificatie</string>

    <string name="pref_avond_sum">Geef notificatie de avond ervoor</string>
    <string name="pref_morgen_sum">Geef notificatie in de ochtend</string>

</resources>